# pong-rs

./: Cargo.toml  LICENSE  Makefile  README.md
assets/texture/: sprites.ron
assets/ui/: main_menu.ron  pause.ron
config/: bg.ron  bindings.ron
design/: sprites.xcf
src/: audio.rs  main.rs  pong.rs
src/states/: game.rs  main_menu.rs  mod.rs  pause.rs
src/systems/: ai.rs  bounce.rs  mod.rs  move_balls.rs  paddle.rs  pause.rs  winner.rs
