[package]
name = "amethyst-pong"
version = "0.4.0"
authors = []
edition = "2018"

[dependencies.amethyst]
version = "0.14"
features = ["nightly"]

[dependencies]
ron = "*"
serde = "*"
rand = "*"

[features]
default = ["vulkan"]
no-slow-safety-checks = ["amethyst/no-slow-safety-checks"]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]
